# paperless-llm

./: .gitignore  Cargo.toml  README.md  grammar.gbnf  prompt.txt
src/: llamacpp.rs  main.rs  paperless.rs
