[package]
name = "paperless"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
governor = "0.8.1"
indicatif = "0.17.11"
prettydiff = "0.8.0"
reqwest = { version = "0.12.13", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-truncate = "2.0.0"
